--- a/_config.yml
+++ b/_config.yml
@@ -3,18 +3,18 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Hexo
+title: Smile
 subtitle: ''
-description: ''
+description: 没事早点睡，有空多花钱
 keywords:
-author: John Doe
-language: en
-timezone: ''
+author: Smile
+language: zh-CN
+timezone: Asia/Shanghai
 
 # URL
 ## Set your site url here. For example, if you use GitHub Page, set url as 'https://username.github.io/project'
-url: http://example.com
-permalink: :year/:month/:day/:title/
+url: https://xuan258.github.io
+permalink: :title/
 permalink_defaults:
 pretty_urls:
   trailing_index: true # Set to false to remove trailing 'index.html' from permalinks
