--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "version": "6.2.0"
   },
   "dependencies": {
+    "add": "^2.0.6",
     "hexo": "^6.2.0",
     "hexo-browsersync": "^0.3.0",
     "hexo-deployer-git": "^3.0.0",
@@ -26,6 +27,7 @@
     "hexo-renderer-marked": "^5.0.0",
     "hexo-renderer-stylus": "^2.1.0",
     "hexo-server": "^3.0.0",
-    "hexo-theme-landscape": "^0.0.3"
+    "hexo-theme-landscape": "^0.0.3",
+    "hexo-wordcount": "^6.0.1"
   }
 }
