--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -5,7 +5,9 @@
 menu:
   首页: / || fas fa-home
   音乐库: /music/ || fas fa-music
+  标签: /tags/ || fas fa-tags
   分类: /categories/ || fas fa-folder-open
+  友情链接: /about/ || fas fa-heart
   # Home: / || fas fa-home
   # Archives: /archives/ || fas fa-archive
   # Tags: /tags/ || fas fa-tags
@@ -193,12 +195,12 @@ post_copyright:
 
 # Sponsor/reward
 reward:
-  enable: false
+  enable: true
   QR_code:
-    - img: /img/wechat.jpg
+    - img: /img/wechat_pay.png
       link:
       text: 微信
-    - img: /img/ali_pay.jpg
+    - img: /img/ali_pay.png
       link:
       text: 支付宝
 
@@ -224,7 +226,7 @@ photofigcaption: false
 # 1: The 'next post' will link to old post
 # 2: The 'next post' will link to new post
 # false: disable pagination
-post_pagination: 1
+post_pagination: 2 #下一篇顯示的是新文章
 
 # Displays outdated notice for a post (文章過期提醒)
 noticeOutdate:
@@ -650,12 +652,12 @@ aside:
   card_categories:
     enable: true
     limit: 8 # if set 0 will show all
-    expand: none # none/true/false
+    expand: none # none/true/falses
     sort_order: # Don't modify the setting unless you know how it works
   card_tags:
     enable: true
     limit: 40 # if set 0 will show all
-    color: false
+    color: true
     sort_order: # Don't modify the setting unless you know how it works
   card_archives:
     enable: true
@@ -683,7 +685,7 @@ runtimeshow:
   enable: false
   publish_date:
 
-# Aside widget - Newest Comments
+# Aside widget - Newest Comments 侧边最新评论板块
 newest_comments:
   enable: false
   sort_order: # Don't modify the setting unless you know how it works
