--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -563,7 +563,7 @@ fireworks:
 
 # Mouse click effects: Heart symbol (鼠標點擊效果: 愛心)
 click_heart:
-  enable: false
+  enable: true
   mobile: false
 
 # Mouse click effects: words (鼠標點擊效果: 文字)
@@ -845,7 +845,7 @@ inject:
   head:
     - <link rel="stylesheet" href="/css/background.css">
   bottom:
-    - <div class="aplayer no-destroy" data-id="173141373" data-server="netease" data-type="playlist" data-fixed="true" data-autoplay="false"> </div>
+    - <div class="aplayer no-destroy" data-id="173141373" data-server="netease" data-type="playlist" data-fixed="true" data-autoplay="false"> </div> 
 
 # CDN
 # Don't modify the following settings unless you know how they work
