--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "add": "^2.0.6",
     "hexo": "^6.2.0",
     "hexo-browsersync": "^0.3.0",
+    "hexo-butterfly-wowjs": "^1.0.5",
     "hexo-deployer-git": "^3.0.0",
     "hexo-generator-archive": "^1.0.0",
     "hexo-generator-category": "^1.0.0",
